--- a/index.html
+++ b/index.html
@@ -173,7 +173,14 @@
     <!-- Contact Section -->
 
     <section id="contact">
-      <p>Email: dbuice@basecampcodingacademy.org</p>
+       <div class="container">
+           <div class="row">
+               <div class="col-lg-12 text-center">
+                   <h2 class="section-heading">Contact Us</h2>
+                   <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+               </div>
+           </div>
+          <p>Email: dbuice@basecampcodingacademy.org
    </section>
 
    <footer>
