checking for correction

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Hello, my name is Dustin Buice!</div>
+                <div class="intro-lead-in">Hell, my name is Dustin Buice!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
                 <a href="#portfolio" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
