added store website

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@ function openOne() {
 function openTwo() {
     window.open("gladiat.html");
 }
+function openThree() {
+    window.open("https://dustinbuice18.github.io/clip-snip-and-curl/");
+}
 </script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -349,6 +352,7 @@ function openTwo() {
                                 <p>Tetris: <button type="button" onclick="openWin()">View</button>
                                 <p>Vowel check: <button type="button" onclick="openOne()">View</button>
                                 <p>gladiator game: <button type="button" onclick="openTwo()">View</button>
+                                <p>store website: <button type="button" onclick="openThree()">View</button>
                                 </form>
                                 <p>These are programs that I have made at Base Camp.
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
