--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ function openThree() {
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                  <p> E-mail: dbuice@basecampcodindacademy.org</p>
+                  <p> E-mail: dbuice@basecampcodingacademy.org</p>
                 </div>
               </div>
             </div>
