added more program files

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@ function openTwo() {
 function openThree() {
     window.open("https://dustinbuice18.github.io/clip-snip-and-curl/");
 }
+function openFour() {
+    window.open("file:///Users/dustinbuice18/browser_sudoku/index.html");
+}
 </script>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -326,6 +329,7 @@ function openThree() {
                                 <p>Vowel check: <button type="button" onclick="openOne()">View</button>
                                 <p>gladiator game: <button type="button" onclick="openTwo()">View</button>
                                 <p>store website: <button type="button" onclick="openThree()">View</button>
+                                <p>Sudoku game: <button type="button" onclick="openFour()">View</button>
                                 </form>
                                 <p>These are programs that I have made at Base Camp.
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
