hopefully put local links on project folder

--- a/index.html
+++ b/index.html
@@ -31,13 +31,16 @@ function openOne() {
     window.open("vowels.html");
 }
 function openTwo() {
-    window.open("gladiat.html");
+    window.open("https://dustinbuice18.github.io/gladiatorgame/");
 }
 function openThree() {
     window.open("https://dustinbuice18.github.io/clip-snip-and-curl/");
 }
 function openFour() {
-    window.open("file:///Users/dustinbuice18/browser_sudoku/index.html");
+    window.open("https://rkeisling.github.io/browser_sudoku/");
+}
+function openFour() {
+    window.open("https://rkeisling.github.io/flea/");
 }
 </script>
 
