added another project to project folder

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ function openThree() {
 function openFour() {
     window.open("https://rkeisling.github.io/browser_sudoku/");
 }
-function openFour() {
+function openFive() {
     window.open("https://rkeisling.github.io/flea/");
 }
 </script>
@@ -333,8 +333,9 @@ function openFour() {
                                 <p>gladiator game: <button type="button" onclick="openTwo()">View</button>
                                 <p>store website: <button type="button" onclick="openThree()">View</button>
                                 <p>Sudoku game: <button type="button" onclick="openFour()">View</button>
+                                <p>flea game: <button type="button" onclick="openFive()">View</button>
                                 </form>
-                                <p>These are programs that I have made at Base Camp.
+                                <p>Here are programs that I have made at Base Camp.
                                 <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                             </div>
                         </div>
